<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.example.arvindkumar.bluetoothconnection.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp"
        android:text="@string/header_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/tv_bt_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:text="@string/bluetooth_status" />

        <ToggleButton
            android:id="@+id/btn_bluetooth_power"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.3"
            android:textAllCaps="false"

            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/ovel_layout"
        android:padding="15dp">

        <ListView
            android:id="@+id/list_active_devices"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
<LinearLayout android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent">
    <ImageButton
        android:id="@+id/ibtn_refresh"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/refresh" />
    <Spinner
        android:id="@+id/spinner_select_device"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorovel"/>
</LinearLayout>
    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/send_button" />
</LinearLayout>
